; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_zfs_vnops.c_zfs_access.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_zfs_vnops.c_zfs_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@V_ACE_MASK = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32*, i32*)* @zfs_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_access(i32* %0, i32 %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_6__*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call %struct.TYPE_6__* @VTOZ(i32* %14)
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %11, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %12, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = call i32 @ZFS_ENTER(i32* %19)
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %22 = call i32 @ZFS_VERIFY_ZP(%struct.TYPE_6__* %21)
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @V_ACE_MASK, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %5
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* @B_FALSE, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = call i32 @zfs_zaccess(%struct.TYPE_6__* %28, i32 %29, i32 %30, i32 %31, i32* %32)
  store i32 %33, i32* %13, align 4
  br label %40

34:                                               ; preds = %5
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* %8, align 4
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @zfs_zaccess_rwx(%struct.TYPE_6__* %35, i32 %36, i32 %37, i32* %38)
  store i32 %39, i32* %13, align 4
  br label %40

40:                                               ; preds = %34, %27
  %41 = load i32*, i32** %12, align 8
  %42 = call i32 @ZFS_EXIT(i32* %41)
  %43 = load i32, i32* %13, align 4
  ret i32 %43
}

declare dso_local %struct.TYPE_6__* @VTOZ(i32*) #1

declare dso_local i32 @ZFS_ENTER(i32*) #1

declare dso_local i32 @ZFS_VERIFY_ZP(%struct.TYPE_6__*) #1

declare dso_local i32 @zfs_zaccess(%struct.TYPE_6__*, i32, i32, i32, i32*) #1

declare dso_local i32 @zfs_zaccess_rwx(%struct.TYPE_6__*, i32, i32, i32*) #1

declare dso_local i32 @ZFS_EXIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
